welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:6: error: reassignment to val
	nbpas = nbpas + 1;}
              ^Program:13: error: reassignment to val
	nbrec = nbrec + 1;
              ^