welcome.lessons.welcome.loopfor.LoopFor.scala.code

var nbpas = 0;

for(nbpas<-0 to 7 ){
	avance();
	nbpas = nbpas + 1;}

prendBiscuit();
var nbrec = 0;

for(nbrec<- 7 to 0){
	recule();
	nbrec = nbrec + 1;
	
}
poseBiscuit();
